Fix spacing issues
Reverts commit 0a9f6b7e7c81b2016f56177e7454cdb088cc67c5 and some changes on commit 703356058b24b09545a9a27a48f8e082d2fdc128, fixes #29 properly

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -102,7 +102,7 @@ header {
 	}
 	
 	.navbar-brand img {
-		margin-right: 1.0rem
+		margin-right: 0.5rem
 	}
 	
 }
